--- a/web/css/bundle.css
+++ b/web/css/bundle.css
@@ -1335,7 +1335,7 @@ img.aligncenter{display:block;margin-left:auto;margin-right:auto}
 #top-unit{padding:40px 25px 20px 25px;background-color:#feffc5;margin-top:-10px;border-radius:5px;margin-bottom:15px}
 #top-unit .btn{text-shadow:none;padding-left:19px;padding-right:19px}
 #top-unit a{color:#666;font-family:arial,sans-serif;font-size:13px}
-#simple-popup{position:fixed;width:600px;top:50%;left:50%;margin-top:-140px;margin-left:-300px;background:white;color:black;z-index:1009;border:4px solid #ccc;border-radius:10px;padding:7px 11px 7px 11px;display:none;overflow:hidden;box-shadow:0 4px 23px 5px rgba(0,0,0,0.2),0 2px 6px rgba(0,0,0,0.15)}
+#simple-popup{display:none;position:fixed;z-index:1009;width:600px;max-width:810px;max-height:380px;overflow:auto;overflow-x:auto;overflow-y:auto;top:50%;left:50%;margin-top:-170px;margin-left:-300px;background:white;color:black;border:4px solid #ccc;border-radius:10px;padding:7px 11px 7px 11px;box-shadow:0 4px 23px 5px rgba(0,0,0,0.2),0 2px 6px rgba(0,0,0,0.15)}
 #popup-mask{position:absolute;z-index:900;background:url(/css/asset/fancybox/2.1.2/fancybox_overlay.png);display:none;top:0;left:0;opacity:.8}
 #block-spinner{text-align:center;position:fixed;width:200px;background:black;opacity:.8;color:white;border-radius:10px;top:50%;left:50%;margin-top:-40px;margin-left:-80px;z-index:1090;padding:10px;display:none;overflow:hidden}
 #simple-popup #content{padding:10px;min-height:30px;overflow:hidden}
